[package]
name = "rust-piston-2d-square-fps"
version = "0.1.0"
authors = [
    "Brad Barrows <bebrws@gmail.com>"
]

[[bin]]
name = "rust-piston-2d-square-fps"

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.37.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"
find_folder = "0.3.0"
chrono = "0.4.19"


